05_kubernetes/app/k8s-reference/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-lab-ref
  labels:
    app.kubernetes.io/part-of: skillspace
