05_kubernetes/app/k8s-reference/04-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: k8s-lab-ref
  labels:
    app: db
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: k8s-lab-db:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "opsuser", "-d", "skillspace"]
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "opsuser", "-d", "skillspace"]
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 500m
              memory: 384Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: db-data
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: k8s-lab-ref
spec:
  selector:
    app: db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
